# rotary-encoder-rs

./: Cargo.toml  README.md
examples/: echo.rs
src/: lib.rs
